# ajisai_render

./: .clang-format  .gitignore  CMakeLists.txt  ChangeLog  README  README.md  exec.py
ajisai/: CMakeLists.txt  ajisai.h  configure.h.cmake
ajisai/app/: CMakeLists.txt  main.cpp
ajisai/core/: CMakeLists.txt  coordinate_system.h  embree.cpp  embree.h  film.cpp  film.h  image.cpp  image.h  intersection.h  parallel.cpp  parallel.h  random.h  ray.h  warp.h
ajisai/core/aggregate/: aggregate.h  embree_aggregate.cpp  native_aggregate.cpp  ploc_aggregate.cpp
ajisai/core/bsdf/: aggregate_bsdf.cpp  aggregate_bsdf.h  bsdf.cpp  bsdf.h  diffuse_component.cpp  diffuse_component.h  helper.h  microfacet_reflection_component.cpp  microfacet_reflection_component.h  plastic_bsdf.cpp  plastic_bsdf.h
ajisai/core/camera/: camera.h  thin_lens.cpp
ajisai/core/filter/: box_filter.cpp  filter.h  gaussian_filter.cpp  mitchell_filter.cpp
ajisai/core/geometry/: cube.cpp  geometry.h  helper.h  mesh.cpp  quad.cpp  sphere.cpp  two_sided.cpp
ajisai/core/light/: area_light.cpp  area_light.h  directional_light.cpp  env_light.cpp  env_light.h  light.h
ajisai/core/material/: diffuse.cpp  disney.cpp  fresnel.cpp  fresnel.h  glass.cpp  material.h  metal.cpp  mirror.cpp  null.cpp  plastic.cpp
ajisai/core/medium/: homogeneous.cpp  medium.h  phase_function.h  void_medium.cpp
ajisai/core/post_processor/: post_processor.cpp  post_processor.h
ajisai/core/primitive/: geometric.cpp  primitive.h
ajisai/core/renderer/: hashgrid.h  helper.h  photon_mapping.h  pt.cpp  renderer.h  sppm.cpp  vcm.cpp
ajisai/core/sampler/: random_sampler.cpp  sampler.h
ajisai/core/scene/: default_scene.cpp  scene.h
ajisai/core/texture2d/: checker.cpp  constant2d.cpp  hdrtex.cpp  imagetex.cpp  texture2d.h
ajisai/factory/: CMakeLists.txt  factory.cpp  factory.h
ajisai/factory/creator/: aggregate_creators.cpp  aggregate_creators.h  camera_creators.cpp  camera_creators.h  filter_creators.cpp  filter_creators.h  geometry.h  geometry_creators.cpp  geometry_creators.h  helper.h  light_creators.cpp  light_creators.h  material_creators.cpp  material_creators.h  medium_creators.cpp  medium_creators.h  post_processor_creators.cpp  post_processor_creators.h  primitive_creators.cpp  primitive_creators.h  renderer_creators.cpp  renderer_creators.h  scene_creators.cpp  scene_creators.h  texture2d_creators.cpp  texture2d_creators.h
ajisai/math/: angle.h  bool_vector.h  bounds.h  color.h  constants.h  functions.h  math.h  matrix.h  matrix4.h  rectangular_matrix.h  spectrum.h  spectrum.hpp  tags.h  typeTraits.h  unit.h  vector.h  vector2.h  vector3.h  vector4.h
ajisai/utility/: CMakeLists.txt  distribution.h  hash.h  log.cpp  log.h  mem_arena.h  ptr.h  ref.h
deprecated-code/Ajisai/: Ajisai.h  CMakeLists.txt
deprecated-code/Ajisai/Accelerator/: CMakeLists.txt
deprecated-code/Ajisai/App/: Test.cpp
deprecated-code/Ajisai/Core/: BSDF.cpp  BSDF.h  CoordinateSystem.h  Film.h  Geometry.cpp  Geometry.h  Light.h  Mesh.h  Parallel.h  RenderJob.cpp  RenderJob.h  Sampler.h  Scene.cpp  Warp.h
deprecated-code/Ajisai/Integrators/: CMakeLists.txt  Integrator.h  Path.cpp
deprecated-code/Ajisai/Materials/: CMakeLists.txt  Glass.h  Material.h  Matte.h  Ward.cpp  Ward.h
deprecated-code/Ajisai/Math/: BoolVector.h  Color.h  Math.h  Matrix.h  Matrix4.h  RectangularMatrix.h  Spectrum.hpp  TypeTraits.h  Unit.h  Vector.h  Vector2.h
deprecated-code/Ajisai/PluginManager/: AbstractManager.cpp  Common.h  configure.h.cmake
deprecated-code/Ajisai/Util/: CMakeLists.txt  Directory.cpp  Directory.h  Distribution.h  Macros.h  Ptr.h  Stream.cpp  Unicode.cpp
src/: CMakeLists.txt
src/Ajisai/: CMakeLists.txt
src/Ajisai/Accelerator/: Accelerator.cpp  Accelerator.h  BVHAccel.cpp  CMakeLists.txt  EmbreeAccel.cpp
src/Ajisai/App/: Ajisai.cpp  Test.cpp
src/Ajisai/Core/: BSDF.cpp  BSDF.h  Camera.cpp  Camera.h  Emitter.h  Film.h  Geometry.cpp  Geometry.h  Image.cpp  Image.h  Image.hpp  Integrator.h  Light.h  Material.h  Mesh.cpp  Mesh.h  Parallel.cpp  Parallel.hpp  Random.h  RenderJob.cpp  RenderJob.h  Sampler.h  Scene.h  Warp.h
src/Ajisai/Integrators/: BidirectionalPath.cpp  BidirectionalPath.h  CMakeLists.txt  Integrator.cpp  Integrator.h  MultiplexedMLT.cpp  Path.cpp
src/Ajisai/Materials/: CMakeLists.txt  Glass.cpp  Glass.h  Material.h  Matte.cpp  Matte.h  Mirror.cpp  Mirror.h
src/Ajisai/Math/: Angle.h  BoolVector.h  Bounds.hpp  Color.h  Constants.h  Functions.h  Math.h  Matrix.h  Matrix4.h  RectangularMatrix.h  Spectrum.hpp  Tags.h  Vector.h  Vector2.h  Vector3.h  Vector4.h
src/Ajisai/PluginManager/: AbstractManager.cpp  AbstractManager.h  AbstractPlugin.cpp  AbstractPlugin.h  CMakeLists.txt  Manager.h
src/Ajisai/Util/: Allocator.cpp  Allocator.h  CMakeLists.txt  Directory.cpp  Directory.h  Macros.h  Stream.h  Unicode.h  ZStream.cpp  ZStream.h
